[package]
name = "PebbleVault"
description = "A high performance data storage solution written in rust"
license = "Apache-2.0"
version = "0.2.0"
edition = "2021"

[build-dependencies]
bindgen = "0.69.4"

[dependencies]
rusqlite = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.118"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
libc = "0.2.155"
lazy_static = "1.5.0"
rstar = "0.12.0"
tempfile = "3.12.0"
rand = "0.8.5"
config = "0.13.0"

piston = "0.53.0"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.81.0"
