[package]
name = "PebbleVault"
description = "A high performance data storage solution written in rust"
license = "Apache-2.0"
version = "0.5.0"
edition = "2021"

[build]
rustflags = ["-L", "./sqlite-amalgamation/sqlite3.lib"]

[build-dependencies]
bindgen = "0.69.4"

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.118"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
libc = "0.2.155"
lazy_static = "1.5.0"
rstar = "0.12.0"
tempfile = "3.12.0"
rand = "0.8.5"
colored = "2.0"
indicatif = "0.17.0"
